--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "@nestjs/platform-express": "^11.0.1",
     "@thallesp/nestjs-better-auth": "^2.2.0",
     "better-auth": "^1.4.9",
+    "dotenv": "^17.2.3",
     "mongodb": "^7.0.0",
     "mongoose": "^9.0.2",
     "reflect-metadata": "^0.2.2",
