--- a/server/package.json
+++ b/server/package.json
@@ -23,7 +23,9 @@
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
     "@nestjs/mapped-types": "*",
+    "@nestjs/mongoose": "^11.0.4",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/platform-ws": "^11.1.10",
     "@thallesp/nestjs-better-auth": "^2.2.0",
     "better-auth": "^1.4.9",
     "dotenv": "^17.2.3",
