wip: social provider

--- a/server/.env.example
+++ b/server/.env.example
@@ -5,3 +5,11 @@ MONGODB_URI=*******
 
 PORT=*******
 
+# social auth
+# google
+GOOGLE_CLIENT_ID=*******
+GOOGLE_CLIENT_SECRET=*******
+
+# apple
+APPLE_CLIENT_ID=*******
+APPLE_CLIENT_SECRET=*******
